--- a/android-engineer.html
+++ b/android-engineer.html
@@ -90,7 +90,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692162834-android-software-engineer-coches-motos-net'>Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692162834-android-software-engineer-coches-motos-net'>Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -116,7 +116,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Chicago, Illinois, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/72f84fd6-297a-4479-b20c-f52c45aebebc'>Quizlet - Android Software Engineer, Team Engagement</a></h5> 
+<h5><a href='https://jobs.lever.co/quizlet-2/72f84fd6-297a-4479-b20c-f52c45aebebc'>Quizlet - Android Software Engineer, Team Engagement</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -158,7 +158,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Mexico City, Mexico Mexico City, Mexico Mexico</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tally/599ebf1b-d316-4979-8e34-0e034a1f4a4f'>Tally - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tally/599ebf1b-d316-4979-8e34-0e034a1f4a4f'>Tally - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA Vancouver, BC</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -170,7 +170,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/scribd/4d276015-3a2d-4cc8-9ea8-e24f6d4d2721'>Scribd - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/scribd/4d276015-3a2d-4cc8-9ea8-e24f6d4d2721'>Scribd - Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -249,7 +249,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/eaze/6c69f698-d8df-49e1-b9ac-2d482ffb0cd3'>Eaze - Native Android and React Native Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/eaze/6c69f698-d8df-49e1-b9ac-2d482ffb0cd3'>Eaze - Native Android and React Native Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -257,7 +257,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tymit.workable.com/j/E151A0FE4F'>Tymit - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<h5><a href='https://tymit.workable.com/j/E151A0FE4F'>Tymit - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -269,7 +269,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ultramobile.applicantstack.com/x/detail/a296ecjuhvow'>Senior Android Engineer - Ultra Mobile</a></h5> 
+<h5><a href='https://ultramobile.applicantstack.com/x/detail/a296ecjuhvow'>Senior Android Engineer - Ultra Mobile</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 28, 2019 ... Because Ultra/Mint Mobile is looking for our next extraordinary Senior Android 
 Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
@@ -319,16 +319,16 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Los Angeles Los Angeles</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/takescoop/4f382b09-4a8d-4376-9c78-a5ffac4ef73e'>Scoop - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/takescoop/4f382b09-4a8d-4376-9c78-a5ffac4ef73e'>Scoop - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/joyn/b511fd47-8db2-4e13-b05c-4f16716451f2'>Joyn GmbH - Senior Android Engineer (m/f/d)</a></h5> 
+<h5><a href='https://jobs.lever.co/joyn/b511fd47-8db2-4e13-b05c-4f16716451f2'>Joyn GmbH - Senior Android Engineer (m/f/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 27, 2019 ... Minimum of 5 years of experience as an app developer and at least 3 as Android 
 developer. You're experienced when it comes to improving your colleagues?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wattpad/630ca13e-fd65-4ed2-877e-f406060d60d8'>Wattpad - Android Engineer, Premium</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wattpad/630ca13e-fd65-4ed2-877e-f406060d60d8'>Wattpad - Android Engineer, Premium</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -420,7 +420,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/egnyte/job/oG1L9fwl'>Egnyte Careers - Senior Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/egnyte/job/oG1L9fwl'>Egnyte Careers - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
@@ -463,7 +463,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
